--- a/Ubuntu/ubuntu.css
+++ b/Ubuntu/ubuntu.css
@@ -108,7 +108,7 @@
 }
 
 @font-face {
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu Mono';
   font-style: italic;
   font-weight: 400;
   src: local('Ubuntu Mono Italic'),
